@@ -1,3 +1,7 @@
+2007-08-25  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* readelf.c (process_note): Recognize SPU core file notes.
+
 2007-08-24  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* configure.in: Install embedspu on powerpc*-*-eabi* also.
