@@ -1,3 +1,9 @@
+2007-08-25  Ulrich Weigand  <uweigand@de.ibm.com>
+	    Alan Modra  <amodra@bigpond.net.au>
+
+	* elf.c (elfcore_grok_spu_note): New function.
+	(elf_parse_notes): Call it.
+
 2007-08-24  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* elf64-x86-64.c (elf64_x86_64_relocate_section): Adjust
